[gd_scene load_steps=65 format=3 uid="uid://gfk7a32t7eya"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_04qiu"]
[ext_resource type="Texture2D" uid="uid://dvsjvixkke4h5" path="res://Assets/Player/balloon_1.png" id="3_rqs2r"]
[ext_resource type="Texture2D" uid="uid://cc6xsbdip52h2" path="res://Assets/Player/balloon_2.png" id="4_8lck3"]
[ext_resource type="Texture2D" uid="uid://drnq8nvqe362s" path="res://Assets/Player/deflate_1.png" id="4_appeh"]
[ext_resource type="Texture2D" uid="uid://rxmpuo4oetsa" path="res://Assets/Player/balloon_3.png" id="5_6kn1t"]
[ext_resource type="Texture2D" uid="uid://bx6tfrr04nubb" path="res://Assets/Player/deflate_2.png" id="5_uatd1"]
[ext_resource type="Texture2D" uid="uid://rnl10ljjr46f" path="res://Assets/Player/balloon_4.png" id="6_k0jpq"]
[ext_resource type="Texture2D" uid="uid://bcsexibssssap" path="res://Assets/Player/deflate_3.png" id="6_phghi"]
[ext_resource type="Texture2D" uid="uid://blu7ayyuao53d" path="res://Assets/Player/deflate_4.png" id="7_6048o"]
[ext_resource type="Texture2D" uid="uid://b46orx4u1a6h3" path="res://Assets/Player/balloon_5.png" id="7_rmrfy"]
[ext_resource type="Texture2D" uid="uid://cnbfhx1qah2x1" path="res://Assets/Player/deflate_5.png" id="8_n3vnf"]
[ext_resource type="Texture2D" uid="uid://crr3sgp7216i5" path="res://Assets/Player/balloon_6.png" id="8_x8qha"]
[ext_resource type="Texture2D" uid="uid://cpq4egcyq83a6" path="res://Assets/Player/balloon_7.png" id="9_fk7uq"]
[ext_resource type="Texture2D" uid="uid://c7tfl16uljwgn" path="res://Assets/Player/deflate_6.png" id="9_yju3p"]
[ext_resource type="Texture2D" uid="uid://cho0u14nna57e" path="res://Assets/Player/inflate_1.png" id="10_muqkc"]
[ext_resource type="Texture2D" uid="uid://dfxfiwjdtyjw8" path="res://Assets/Player/inflate_2.png" id="11_uohf4"]
[ext_resource type="Texture2D" uid="uid://ctamvh6fkwduv" path="res://Assets/Player/inflate_3.png" id="12_wg4wx"]
[ext_resource type="Texture2D" uid="uid://draye55puo2jq" path="res://Assets/Player/inflate_4.png" id="13_l3mnu"]
[ext_resource type="Texture2D" uid="uid://lsreb31ri6m7" path="res://Assets/Player/inflate_5.png" id="14_bu0ea"]
[ext_resource type="Texture2D" uid="uid://dp0bsr33aljyb" path="res://Assets/Player/inflate_6.png" id="15_mrfii"]
[ext_resource type="Texture2D" uid="uid://370xuirg1slw" path="res://Assets/Player/inflate_7.png" id="16_dli2e"]
[ext_resource type="PackedScene" uid="uid://dsikqec1o7me4" path="res://Scenes/rope.tscn" id="17_1620f"]
[ext_resource type="AudioStream" uid="uid://dr4xyj7k0ujw1" path="res://Assets/SFX/balloon-inflate.wav" id="17_yhdh4"]
[ext_resource type="AudioStream" uid="uid://usm2rc3gjfx8" path="res://Assets/SFX/balloon-deflate.wav" id="18_ewban"]
[ext_resource type="AudioStream" uid="uid://cbopngp07wr4x" path="res://Assets/SFX/balloon-sneeze.wav" id="19_wtji7"]
[ext_resource type="PackedScene" uid="uid://b6d88e4try54b" path="res://Scenes/double_tap_detector.tscn" id="20_4ya26"]
[ext_resource type="Texture2D" uid="uid://dktiiu6cngptj" path="res://Assets/Player/Pop/Pop 1/pop_1.png" id="23_th4lm"]
[ext_resource type="Texture2D" uid="uid://duxn7btx1lsdo" path="res://Assets/Player/Pop/Pop 1/pop_2.png" id="24_hbxgb"]
[ext_resource type="Texture2D" uid="uid://dh3v1t1d4tg5w" path="res://Assets/Player/Pop/Pop 1/pop_3.png" id="25_uxvrl"]
[ext_resource type="Texture2D" uid="uid://xccruybbh03b" path="res://Assets/Player/Pop/Pop 1/pop_4.png" id="26_7351a"]
[ext_resource type="AudioStream" uid="uid://beqi4lrnvk7qs" path="res://Assets/SFX/balloon-pop.wav" id="26_ks3vk"]
[ext_resource type="Texture2D" uid="uid://cc0inxagg8j5r" path="res://Assets/Player/Pop/Pop 1/pop_5.png" id="27_o140r"]
[ext_resource type="Texture2D" uid="uid://cs0flajapesp" path="res://Assets/Player/Pop/Pop 2/pop_1.png" id="28_v034k"]
[ext_resource type="Texture2D" uid="uid://c3wxm1y17emu2" path="res://Assets/Player/Pop/Pop 2/pop_2.png" id="29_tre3j"]
[ext_resource type="Texture2D" uid="uid://df5a1ndosf68h" path="res://Assets/Player/Pop/Pop 2/pop_3.png" id="30_5cnnj"]
[ext_resource type="Texture2D" uid="uid://bhmom3lqq4pvb" path="res://Assets/Player/Pop/Pop 2/pop_4.png" id="31_ccian"]
[ext_resource type="Texture2D" uid="uid://cueue4r1iq3e0" path="res://Assets/Player/Pop/Pop 2/pop_5.png" id="32_o14n7"]
[ext_resource type="Texture2D" uid="uid://dha82arxudvpd" path="res://Assets/Player/Pop/Pop 3/pop_1.png" id="33_dg32i"]
[ext_resource type="Texture2D" uid="uid://dfes3htcnqyka" path="res://Assets/Player/Pop/Pop 3/pop_2.png" id="34_n64rl"]
[ext_resource type="Texture2D" uid="uid://d2rufodqimona" path="res://Assets/Player/Pop/Pop 3/pop_3.png" id="35_7205t"]
[ext_resource type="Texture2D" uid="uid://di6rjj6p1sg5" path="res://Assets/Player/Pop/Pop 3/pop_4.png" id="36_je1bv"]
[ext_resource type="Texture2D" uid="uid://dlfu0fjh8d342" path="res://Assets/Player/Pop/Pop 3/pop_5.png" id="37_vv7ui"]
[ext_resource type="Texture2D" uid="uid://biodvxo6aup2i" path="res://Assets/Player/Pop/Pop 4/pop_1.png" id="38_cv6tf"]
[ext_resource type="Texture2D" uid="uid://7bkiuixnke64" path="res://Assets/Player/Pop/Pop 4/pop_2.png" id="39_h2ndy"]
[ext_resource type="Texture2D" uid="uid://w5l5gtdtdtm2" path="res://Assets/Player/Pop/Pop 4/pop_3.png" id="40_qoqet"]
[ext_resource type="Texture2D" uid="uid://c4ykptnyf8gpc" path="res://Assets/Player/Pop/Pop 4/pop_4.png" id="41_rmyea"]
[ext_resource type="Texture2D" uid="uid://b38r1f0gks8p7" path="res://Assets/Player/Pop/Pop 4/pop_5.png" id="42_6ljus"]
[ext_resource type="Texture2D" uid="uid://bo6cd1vy45we" path="res://Assets/Player/Pop/Pop 5/pop_1.png" id="43_mexsf"]
[ext_resource type="Texture2D" uid="uid://niricq4n77au" path="res://Assets/Player/Pop/Pop 5/pop_2.png" id="44_kjt6n"]
[ext_resource type="Texture2D" uid="uid://bq1qje5qdqgeu" path="res://Assets/Player/Pop/Pop 5/pop_3.png" id="45_7ydrt"]
[ext_resource type="Texture2D" uid="uid://d3ybfe1hj0yw2" path="res://Assets/Player/Pop/Pop 5/pop_4.png" id="46_oojdm"]
[ext_resource type="Texture2D" uid="uid://c14qy0m0u0ysj" path="res://Assets/Player/Pop/Pop 5/pop_5.png" id="47_hsoub"]
[ext_resource type="Texture2D" uid="uid://dr4eldqx1akh1" path="res://Assets/Player/Pop/Pop 6/pop_1.png" id="48_ybioe"]
[ext_resource type="Texture2D" uid="uid://by6d2bclucygr" path="res://Assets/Player/Pop/Pop 6/pop_2.png" id="49_2jjte"]
[ext_resource type="Texture2D" uid="uid://by3gsd6lrisig" path="res://Assets/Player/Pop/Pop 6/pop_3.png" id="50_hxuq1"]
[ext_resource type="Texture2D" uid="uid://le7mhod0tl8o" path="res://Assets/Player/Pop/Pop 6/pop_4.png" id="51_r5sqp"]
[ext_resource type="Texture2D" uid="uid://31h8n1nsi3nw" path="res://Assets/Player/Pop/Pop 6/pop_5.png" id="52_wcfvd"]
[ext_resource type="Texture2D" uid="uid://bly4qost4k44s" path="res://Assets/Player/Pop/Pop 7/pop_1.png" id="53_2u8u4"]
[ext_resource type="Texture2D" uid="uid://drpbvul10w4q" path="res://Assets/Player/Pop/Pop 7/pop_2.png" id="54_mc2sh"]
[ext_resource type="Texture2D" uid="uid://dfa2sr0ik7bk4" path="res://Assets/Player/Pop/Pop 7/pop_3.png" id="55_vpv4p"]
[ext_resource type="Texture2D" uid="uid://4acg7hvyqo78" path="res://Assets/Player/Pop/Pop 7/pop_4.png" id="56_k8cdy"]
[ext_resource type="Texture2D" uid="uid://bdcecw3pk3vs5" path="res://Assets/Player/Pop/Pop 7/pop_5.png" id="57_dls87"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3mtd1"]
radius = 42.0

[sub_resource type="SpriteFrames" id="SpriteFrames_yxipw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rqs2r")
}, {
"duration": 1.0,
"texture": ExtResource("4_appeh")
}, {
"duration": 1.0,
"texture": ExtResource("5_uatd1")
}, {
"duration": 1.0,
"texture": ExtResource("6_phghi")
}, {
"duration": 1.0,
"texture": ExtResource("7_6048o")
}, {
"duration": 1.0,
"texture": ExtResource("8_n3vnf")
}, {
"duration": 1.0,
"texture": ExtResource("9_yju3p")
}],
"loop": false,
"name": &"deflate",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rqs2r")
}, {
"duration": 1.0,
"texture": ExtResource("4_8lck3")
}, {
"duration": 1.0,
"texture": ExtResource("5_6kn1t")
}, {
"duration": 1.0,
"texture": ExtResource("6_k0jpq")
}, {
"duration": 1.0,
"texture": ExtResource("7_rmrfy")
}, {
"duration": 1.0,
"texture": ExtResource("8_x8qha")
}, {
"duration": 1.0,
"texture": ExtResource("9_fk7uq")
}],
"loop": false,
"name": &"hold",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_muqkc")
}, {
"duration": 1.0,
"texture": ExtResource("11_uohf4")
}, {
"duration": 1.0,
"texture": ExtResource("12_wg4wx")
}, {
"duration": 1.0,
"texture": ExtResource("13_l3mnu")
}, {
"duration": 1.0,
"texture": ExtResource("14_bu0ea")
}, {
"duration": 1.0,
"texture": ExtResource("15_mrfii")
}, {
"duration": 1.0,
"texture": ExtResource("16_dli2e")
}],
"loop": false,
"name": &"inflate",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_th4lm")
}, {
"duration": 1.0,
"texture": ExtResource("24_hbxgb")
}, {
"duration": 1.0,
"texture": ExtResource("25_uxvrl")
}, {
"duration": 1.0,
"texture": ExtResource("26_7351a")
}, {
"duration": 1.0,
"texture": ExtResource("27_o140r")
}],
"loop": false,
"name": &"pop_0",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_v034k")
}, {
"duration": 1.0,
"texture": ExtResource("29_tre3j")
}, {
"duration": 1.0,
"texture": ExtResource("30_5cnnj")
}, {
"duration": 1.0,
"texture": ExtResource("31_ccian")
}, {
"duration": 1.0,
"texture": ExtResource("32_o14n7")
}],
"loop": false,
"name": &"pop_1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_dg32i")
}, {
"duration": 1.0,
"texture": ExtResource("34_n64rl")
}, {
"duration": 1.0,
"texture": ExtResource("35_7205t")
}, {
"duration": 1.0,
"texture": ExtResource("36_je1bv")
}, {
"duration": 1.0,
"texture": ExtResource("37_vv7ui")
}],
"loop": false,
"name": &"pop_2",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_cv6tf")
}, {
"duration": 1.0,
"texture": ExtResource("39_h2ndy")
}, {
"duration": 1.0,
"texture": ExtResource("40_qoqet")
}, {
"duration": 1.0,
"texture": ExtResource("41_rmyea")
}, {
"duration": 1.0,
"texture": ExtResource("42_6ljus")
}],
"loop": false,
"name": &"pop_3",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_mexsf")
}, {
"duration": 1.0,
"texture": ExtResource("44_kjt6n")
}, {
"duration": 1.0,
"texture": ExtResource("45_7ydrt")
}, {
"duration": 1.0,
"texture": ExtResource("46_oojdm")
}, {
"duration": 1.0,
"texture": ExtResource("47_hsoub")
}],
"loop": false,
"name": &"pop_4",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("48_ybioe")
}, {
"duration": 1.0,
"texture": ExtResource("49_2jjte")
}, {
"duration": 1.0,
"texture": ExtResource("50_hxuq1")
}, {
"duration": 1.0,
"texture": ExtResource("51_r5sqp")
}, {
"duration": 1.0,
"texture": ExtResource("52_wcfvd")
}],
"loop": false,
"name": &"pop_5",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("53_2u8u4")
}, {
"duration": 1.0,
"texture": ExtResource("54_mc2sh")
}, {
"duration": 1.0,
"texture": ExtResource("55_vpv4p")
}, {
"duration": 1.0,
"texture": ExtResource("56_k8cdy")
}, {
"duration": 1.0,
"texture": ExtResource("57_dls87")
}],
"loop": false,
"name": &"pop_6",
"speed": 20.0
}]

[node name="Player" type="RigidBody2D"]
physics_interpolation_mode = 1
collision_layer = 2
collision_mask = 13
lock_rotation = true
script = ExtResource("1_04qiu")
MAX_SCALE = Vector2(4, 4)
BASE_SCALE = Vector2(1, 1)
MAX_INFLATION = 250.0
inflation_rate = 125.0
inflation_decay_rate = 30.0
inflation_mult = 1.5
gravity = 75.0
MAX_DEFLATION = 300.0
deflate_rate = 200.0
deflate_cost = 15.0
deflate_decay_rate = 1.0
deflation_mult = 1.2
sneeze_cost = 25.0
sneeze_strength = 300.0
initial_rope_pos = Vector2(-2, 35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_3mtd1")

[node name="Hurtbox" type="Area2D" parent="." groups=["player"]]
position = Vector2(0, -15)

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_3mtd1")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Rope" parent="." instance=ExtResource("17_1620f")]
unique_name_in_owner = true
position = Vector2(-2, 51)
rotation = -0.631548

[node name="Sprite" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Sprite"]
unique_name_in_owner = true
scale = Vector2(0.085, 0.085)
sprite_frames = SubResource("SpriteFrames_yxipw")
animation = &"hold"

[node name="SFXs" type="Node2D" parent="." groups=["fatal"]]
unique_name_in_owner = true

[node name="Inflate SFX" type="AudioStreamPlayer" parent="SFXs"]
unique_name_in_owner = true
stream = ExtResource("17_yhdh4")
volume_db = -20.0

[node name="Deflate SFX" type="AudioStreamPlayer" parent="SFXs"]
unique_name_in_owner = true
stream = ExtResource("18_ewban")
volume_db = -17.5

[node name="Sneeze SFX" type="AudioStreamPlayer" parent="SFXs"]
unique_name_in_owner = true
stream = ExtResource("19_wtji7")
volume_db = -12.0

[node name="Pop SFX" type="AudioStreamPlayer" parent="SFXs"]
unique_name_in_owner = true
stream = ExtResource("26_ks3vk")
volume_db = -5.0

[node name="DoubleTapDetectors" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="DoubleTapDetector" parent="DoubleTapDetectors" instance=ExtResource("20_4ya26")]
CLICK = "deflate"

[node name="DoubleTapDetector2" parent="DoubleTapDetectors" instance=ExtResource("20_4ya26")]
CLICK = "up"

[node name="DoubleTapDetector3" parent="DoubleTapDetectors" instance=ExtResource("20_4ya26")]
CLICK = "down"

[node name="DoubleTapDetector4" parent="DoubleTapDetectors" instance=ExtResource("20_4ya26")]
CLICK = "left"

[node name="DoubleTapDetector5" parent="DoubleTapDetectors" instance=ExtResource("20_4ya26")]
CLICK = "right"

[connection signal="body_entered" from="Hurtbox" to="." method="_on_body_entered_hurtbox"]
